# hollow-heap

./: .gitignore  README.md  opt.txt
benchmark/: CMakeLists.txt  all_tests.cpp  argument.h  assorted.h  benchmark.h  compression.h  count.cpp  count.py  count_optimizations  cuts  cuts.cpp  dijkstra.h  down_ins_comp_measure  down_ins_measure  graph.py  graphs.h  ins_graph.py  links.py  measure_optimizations  prim.h  roads  roads.cpp  run_benchmarks  sort.h  test  up_ins_comp_measure  up_ins_measure
benchmark/wrappers/: compare_node.h  fibonacci_heap.h  hollow_heap.h  pairing_heap.h  relaxed_heap.h  wrappers.h
src/: hollow_heap.hpp  old_hh.hpp  optimizations.hpp  pointer_hollow_heap.hpp  toggle_hollow_heap.hpp  unopt_hollow_heap.hpp
